--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,15 +46,18 @@ dependencies:
   # 元组
   tuple: ^2.0.1
   path: ^1.8.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  freezed: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  build_runner: ^2.1.11
-  flutter_gen_runner: ^4.3.0
-  freezed: ^2.0.3+1
+  build_runner: ^2.3.3
+  flutter_gen_runner: ^5.3.0
   json_serializable: ^6.1.3
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
